// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should repspond to changed by width 1`] = `
LoadedCheerio {
  "0": <pre
    class="nextui-c-gHEIta nextui-c-gHEIta-iesduxI-css"
  >
    <code
      class="nextui-c-PJLV"
    >
      code
    </code>
  </pre>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Code should support block mode 1`] = `
LoadedCheerio {
  "0": <pre
    class="nextui-c-gHEIta"
  >
    <code
      class="nextui-c-PJLV"
    >
      code
    </code>
  </pre>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
